# ml_etiquetas

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  compose.yaml  deploy_to_gcp.ps1  pyproject.toml  undeploy_from_gcp.ps1
.github/workflows/: deploy.yml
.omo/drafts/: atraer-sellers-mercadolibre.md  bug-fixes.md  bug-security-improvements.md  estrategia-sellers-latam.md  marketing-sellers-plan.md  meliops_latam_plan.md  ml-reprint-labels.md
.omo/plans/: automate_gcp_bootstrap_and_secrets.md  docs-update.md  domain-mapping.md  fix-file-size.md  fix_windows_subprocess_error.md  gcp_deployment_hardening_and_cd_cache.md  gcp_orchestration_improvements.md  marketing-watermark-extension.md  ml-reprint-labels.md  seguridad-meliops.md  unify_gcp_deployment_in_python_and_terraform.md
.omo/run-continuation/: ses_17250a27cffekIaYJm8X8NFwZI.json  ses_1753fb45bffe87DaH8dtOvUpRB.json  ses_17543ff14ffeK4KeWdzhE4Z5Do.json  ses_17547cca2ffeAeQ7De6lMiBm3g.json  ses_1755537a2ffeAK3xyK4YEAHr1d.json  ses_1755953b6ffeRa6tatSBF5tsaG.json  ses_175818b5cffeEB6PdOYc9ZLvIC.json  ses_1762596b9ffeF2FkrT84x2iY3V.json  ses_18eb907c9ffeFqNFVfrJ33swdT.json  ses_18eedb5cafferiBlVNIvT2QH4D.json  (+5 more)
app/: main.py
extension/: background.js  content.js  manifest.json  popup.html  popup.js
memory/: decisions.md
scripts/: bootstrap.py  reset_test_user.py
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
tests/: conftest.py  test_auth_callback.py  test_endpoints.py  test_extract.py  test_integration_db.py  test_payments.py  test_quota.py
(+25 files in other folders)
